# libfole

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libfole-wiki.ini  libfole.ini  libfole.pc.in  libfole.spec.in  synclibs.ps1  synclibs.sh
.travis/: runtests.sh  script.sh
common/: memory.h  types.h.in
documentation/: OLE definitions.asciidoc
dpkg/: control  copyright  copyright.in  rules
include/: Makefile.am  libfole.h.in
include/libfole/: definitions.h.in  error.h  extern.h  features.h.in  types.h.in
libfole/: Makefile.am  libfole.c  libfole.rc.in  libfole_definitions.h.in  libfole_error.c  libfole_error.h  libfole_extern.h  libfole_libcerror.h  libfole_libcstring.h  libfole_support.c  libfole_support.h  libfole_types.h  libfole_unused.h  libfole_value_type.c  libfole_value_type.h
manuals/: Makefile.am  libfole.3
msvscpp/: Makefile.am  libfole.sln
msvscpp/fole_test_error/: fole_test_error.vcproj
msvscpp/fole_test_get_version/: fole_test_get_version.vcproj
msvscpp/fole_test_support/: fole_test_support.vcproj
msvscpp/fole_test_value_type/: fole_test_value_type.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libfole/: libfole.vcproj
tests/: Makefile.am  fole_test_error.c  fole_test_get_version.c  fole_test_libcerror.h  fole_test_libcstring.h  fole_test_libfole.h  fole_test_macros.h  fole_test_memory.c  fole_test_memory.h  fole_test_support.c  fole_test_unused.h  fole_test_value_type.c  pkgbuild.sh  runtests.sh  test_api_functions.ps1  test_api_functions.sh  test_library.ps1  test_library.sh  test_runner.sh
