include_HEADERS = \
	libfole.h

pkginclude_HEADERS = \
	libfole/definitions.h \
	libfole/error.h \
	libfole/extern.h \
	libfole/features.h \
	libfole/types.h

EXTRA_DIST = \
	libfole.h.in \
	libfole/definitions.h.in \
	libfole/features.h.in \
	libfole/types.h.in

DISTCLEANFILES = \
	libfole.h \
	libfole/definitions.h \
	libfole/features.h \
	libfole/types.h \
	Makefile \
	Makefile.in

