MSVSCPP_FILES = \
	fole_test_error/fole_test_error.vcproj \
	fole_test_get_version/fole_test_get_version.vcproj \
	libcerror/libcerror.vcproj \
	libcstring/libcstring.vcproj \
	libfole/libfole.vcproj \
	libfole.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

