MSVSCPP_FILES = \
	fole_test_error/fole_test_error.vcproj \
	fole_test_support/fole_test_support.vcproj \
	libcerror/libcerror.vcproj \
	libcstring/libcstring.vcproj \
	libfole/libfole.vcproj \
	libfole.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

