MSVSCPP_FILES = \
	fole_test_error/fole_test_error.vcproj \
	fole_test_support/fole_test_support.vcproj \
	fole_test_value_type/fole_test_value_type.vcproj \
	libcerror/libcerror.vcproj \
	libfole/libfole.vcproj \
	libfole.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

